fix: prevent nav from breaking layout
- rmv unnecessary property mv: xvc; that made the nav bar extend outside the page, which cause uninteded horizontal scrolling.

--- a/src/styles/radix/navigationMenu.css
+++ b/src/styles/radix/navigationMenu.css
@@ -10,9 +10,8 @@
   margin-top: 4.2rem;
   display: flex;
   justify-content: center;
-  width: 100vw;
   z-index: 1;
-  opacity: 0.9;
+  opacity: 0.95;
 }
 
 .NavigationMenuList {
